# libutil

./: CMakeLists.txt  meson.build
include/util/: assert.h  bit.h  debug.h  log.h  profile.h  random.h  simd.h
src/: assert.c  log.c
